--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -1,4 +1,193 @@
 @import 'details-tooltip/popover';
+@import 'details-tooltip/popper-container';
+
+/// NEW POPPER/PORTAL STYLES
+.details-tooltip-display {
+    &__pointer {
+        margin: 0 $spacing-xs;
+
+        *[x-placement^='top'] & {
+            @include makeBorderedPointer($arrow-height, $color-white, $popup-border-color, down);
+
+            .link-dropdown-list & {
+                bottom: 4px;
+            }
+        }
+
+        *[x-placement^='bottom'] & {
+            @include makePointer($arrow-height, $color-walrus, up);
+        }
+        *[x-placement^='bottom'].link-dropdown-list &,
+        *[x-placement^='bottom'].input-selection-list-tooltip & {
+            @include makeBorderedPointer($arrow-height, $color-white, $popup-border-color, up);
+        }
+
+        *[x-placement^='bottom'].alert & {
+            @include makePointer($arrow-height, $color-warning-yellow, up);
+        }
+    }
+
+    &.alert {
+        .details-content-inner {
+            &:after {
+                content: '\21';
+                position: absolute;
+                top: 15px;
+                left: 0;
+                right: 0;
+                font-family: $icon-font;
+                font-size: 22px;
+                text-align: center;
+                color: $color-warning-text;
+            }
+        }
+        .details-body {
+            border-top: $popup-title-height solid $color-warning-yellow;
+        }
+        .details-close,
+        .details-title {
+            display: none;
+        }
+        .title {
+            color: $color-warning-text;
+            text-transform: none;
+            text-align: center;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 1.2em;
+            margin: 0;
+            padding: 0 0 20px;
+        }
+    }
+    &.confirm {
+        .details-content-inner {
+            &:before {
+                color: $color-elderly;
+            }
+            .details-title {
+                background-color: $color-elderly;
+                color: $color-rhino;
+            }
+        }
+    }
+
+    max-width: $popup-width;
+    word-break: break-word;
+
+    .loader {
+        position: relative;
+        display: inline-block;
+        margin: 10px 49%;
+        top: auto;
+        left: auto;
+    }
+
+    .details-content-inner {
+        overflow: hidden;
+        position: relative;
+        box-sizing: border-box;
+
+        min-height: 80px;
+        background-color: $color-white;
+        font-size: 14px;
+
+        @include box-shadow($popup-box-shadow);
+        @include border-radius($popup-border-radius);
+        @include transition(0.3s ease);
+
+    }
+
+    .details-title {
+        padding: 18px 45px 10px;
+
+        background-color: $color-walrus;
+        color: $color-white;
+
+        text-align: center;
+        font-family: $font-pn-regular;
+        font-size: 17px;
+        line-height: 18px;
+        letter-spacing: 0;
+        text-transform: none;
+
+        @include border-radius($popup-border-radius $popup-border-radius 0 0);
+
+        a {
+            font-size: 16px;
+            text-decoration: uppercase;
+            position: absolute;
+        }
+    }
+
+    .sub-title {
+        font-size: 16px;
+        color: $color-rhino;
+        text-decoration: uppercase;
+        padding: 10px 0;
+    }
+
+    .details-body {
+        font-size: $spacing-md;
+        padding: $spacing-lg;
+        color: $color-slate;
+        text-align: left;
+
+        border-style: solid;
+        border-width: 0 1px 1px;
+        border-color: $color-timberwolf;
+        border-radius: 0 0 $popup-border-radius $popup-border-radius;
+
+        .input-file-upload {
+            text-align: center;
+            label {
+                margin: 0;
+                .label-text {
+                    margin: 0 0 15px 22px;
+                }
+            }
+            button {
+                margin: 0;
+            }
+        }
+
+        .link-dropdown-list & {
+            padding: 0;
+        }
+    }
+
+    .details-close {
+        position: absolute;
+        top: 18px;
+        right: 15px;
+        color: transparent;
+        z-index: 2;
+        line-height: 1em;
+        cursor: pointer;
+
+        &:after {
+            font-family: 'iconfont';
+            content: '\78';
+            text-transform: none;
+            font-size: 18px;
+            color: rgba($color-white, 0.3);
+        }
+    }
+    &.input-selection-list-tooltip,
+    &.link-dropdown-list {
+        .details-content-inner {
+            border-color: $color-timberwolf;
+
+            .details-body {
+                padding: 0;
+                border-width: 1px;
+            }
+
+            .input-selection-list {
+                border: none;
+            }
+        }
+    }
+}
 
 .details-tooltip {
     $edge-offset: 10px;
