UIP-1957 fixed words not breaking after hitting the edge of the container
Change-Id: Ia6c8b97c9f31bbf10e7afedfe889907e07db2910

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -108,6 +108,7 @@ table {
         td {
             font-size: 14px;
             color: $color-midnight;
+            word-break: break-word;
 
             button.inline {
                 &.delete {
