--- a/packages/ui-library/src/css/data-sets.scss
+++ b/packages/ui-library/src/css/data-sets.scss
@@ -245,7 +245,7 @@
         }
         .help-tooltip {
             vertical-align: bottom;
-            margin: -3px 0 0 5px;
+            margin: -3px 0 0;
         }
         ul {
             li {
