UIP-1848: Made it easier to drop MultiDrag row at end of list
Change-Id: Icc986c5a1cd1409e4be57e396d4adf23f8f031a8

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -319,4 +319,5 @@
 .selector-row--preview {
     border: 1px solid $color-active-blue;
     background-color: rgba($color-active-blue, 0.25);
+    min-height: 30px;
 }
