UIP-1965 added icon to dropdownlist and added an iconLeft prop to formtextfield to pass into dropdown list to get the icon to appear once the item was selected
Change-Id: I74ae3534ac929f58307995469fc0ee7206619730

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -887,6 +887,11 @@ input[type=file] {
                 background: none;
                 color: $color-rabbit-fur;
             }
+
+
+            &__placeholder {
+                padding-left: 37px;
+            }
         }
         .help-hint-option {
             &.select-option {
@@ -1030,6 +1035,9 @@ input[type=file] {
             &:focus {
                 cursor: pointer;
                 border-color: $color-input-fill;
+            }
+            &--icon-padding {
+                padding-left: 30px;
             }
         }
     }
