UIP-1970: Reverse button bar tab order
Change-Id: I7651518b6ecf67b091ca0444909da232685c75f8

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1283,6 +1283,17 @@ $color-grey-minor-1: $color-neutral-30;
     }
 }
 
+.button-bar {
+    &__buttons {
+        display: inline-flex;
+        flex-flow: row-reverse;
+    }
+
+    &__save {
+        margin-right: 0;
+    }
+}
+
 .tab-set-children {
     padding-left: $spacing-lg;
 }
