--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -8,6 +8,7 @@
 @import 'layout/hero-chart';
 @import 'layout/edit-section';
 @import 'layout/policy-node';
+@import 'layout/scroll-box';
 @import 'layout/stack';
 @import 'layout/header-bar';
 @import 'layout/view-toggle';
