UIP-1968 : fix position of attributes when only some items have labels
Change-Id: Id2059510dfa3ddfbe982f3ab603c487915599da4

--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -2,14 +2,14 @@
     &__row {
         @extend .input-row;
 
-        align-items: center;
+        align-items: flex-end;
         display: inline-flex;
         margin: $spacing-md 0;
         width: 100%;
     }
 
     &__remove {
-        align-self: flex-start;
+        margin-bottom: 1px;
 
         &--no-label {
             align-self: center;
@@ -31,17 +31,14 @@
 
     &--form {
         &__row {
-            align-items: center;
+            align-items: flex-end;
             display: inline-flex;
             justify-content: space-between;
         }
 
         &__icon {
             font-size: 20px;
-
-            &--first {
-                margin-top: 20px;
-            }
+            margin-bottom: 11px;
 
             &--required {
                 color: $color-dolphin;
