UIP-1840 making font path default
Change-Id: I3cdc5a1727473e1611618ad540be6fd152b3223d

--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -1,5 +1,5 @@
 
-$pn-font-path: '../fonts/proxima-nova/';
+$pn-font-path: '../fonts/proxima-nova/' !default;
 
 @font-face {
     font-family: 'ProximaNovaRegular';
