UIP-2005 added white-space nowrap to the row tag so that the word break would not affect the next column
Change-Id: I41a6ccb306f477989f7c42a95e26cbd4b6ce4f75

--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -379,6 +379,7 @@ table.grid--small-padding td {
     color: $color-elephant;
     padding: 3px 3px 2px;
     text-transform: uppercase;
+    white-space: nowrap;
 }
 
 .home-app {
