--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -853,6 +853,9 @@ input[type=file] {
         padding: 8px 0;
         max-height: 200px;
         overflow-y: scroll;
+        div {
+            display: inline-block;
+        }
 
         // each item in dropdown
         .select-option,
@@ -915,6 +918,9 @@ input[type=file] {
                     .help-tooltip-target {
                         color: $color-white;
                     }
+                }
+                &__placeholder {
+                    padding-left: 23px;
                 }
             }
         }
