UIP-1976 : multivalues appears over pages messages UIP-1986 : create a css-wide z-index system
Change-Id: Ie2fea9d26cd1eb97d3ddead32b26dd3679fadc2c

--- a/packages/ui-library/src/css/details-tooltip/_popover.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popover.scss
@@ -134,7 +134,7 @@ $max-popover-width: 360px;
 .popover__container {
     margin-right: -$max-popover-width;
     max-width: $max-popover-width;
-    z-index: 1001;
+    z-index: $zindex__popover;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
