--- a/packages/ui-library/src/css/colorpicker.scss
+++ b/packages/ui-library/src/css/colorpicker.scss
@@ -97,7 +97,7 @@
         position: absolute;
         top: calc(40px + #{$arrow-height});
         left: 0;
-        z-index: 2;
+        z-index: $zindex__menu;
         padding: 10px;
         background: $color-white;
 
