--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -279,7 +279,7 @@
     > .details-content {
         display: none;
         position: absolute;
-        z-index: 1001;
+        z-index: $zindex__popover;
 
         top: 100%;
         bottom: auto;
@@ -378,7 +378,7 @@
                 top: 18px;
                 right: 15px;
                 color: transparent;
-                z-index: 2;
+                z-index: $zindex__popover;
                 line-height: 1em;
                 cursor: pointer;
 
