--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -1,5 +1,9 @@
 
+// PATHS ---------------------------------------------------------------------------------------------------------------
+$img-path: '../images/';
 $pn-font-path: '../fonts/proxima-nova/' !default;
+
+// FONTS ---------------------------------------------------------------------------------------------------------------
 
 @font-face {
     font-family: 'ProximaNovaRegular';
@@ -31,12 +35,6 @@ $pn-font-path: '../fonts/proxima-nova/' !default;
     src: url('#{$pn-font-path}ProximaNovaCond-Regular.otf');
 }
 
-$img-path: '../images/';
-
-@import 'colors';
-@import 'spacing';
-
-// FONTS
 $font-stack: 'ProximaNovaRegular', helvetica, arial, sans-serif;
 $font-pn-regular: 'ProximaNovaRegular', helvetica, arial, sans-serif;
 $font-pn-bold: 'ProximaNovaBold', helvetica, arial, sans-serif;
@@ -46,9 +44,24 @@ $font-pn-cond-regular: 'ProximaNovaCondRegular', helvetica, arial, sans-serif;
 $icon-font: 'iconfont';
 $input-font-stack: proxima-nova, sans-serif;
 
-// MISC
+// Z-INDEXES -----------------------------------------------------------------------------------------------------------
+$zindex__modal:          80;
+$zindex__nav--primary:   70;
+$zindex__page-overlay:   60;
+$zindex__message:        50;
+$zindex__popover:        40;
+$zindex__menu:           30;
+$zindex__fixed-controls: 20;
+$zindex__elevated:       10;
+$zindex__base:            0;
+$zindex__hidden:        -10;
+
+// MISC ----------------------------------------------------------------------------------------------------------------
 $layout-header-height: 64px;    // used in miltiple includes
 $layout-nav-width: 190px;       // used in miltiple include
 $line-height-default: 1.3em;
 
+// IMPORTS -------------------------------------------------------------------------------------------------------------
+@import 'colors';
+@import 'spacing';
 @import 'text-styles';
