--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -347,7 +347,7 @@ $expandable-row-gap: 12px;
             }
         }
         &.z-index-priority {
-            z-index: 100;
+            z-index: $zindex__elevated;
         }
         .item-message {
             display: block;
@@ -398,11 +398,11 @@ $expandable-row-gap: 12px;
     }
 
     &:after {
-        z-index: 1;
+        z-index: $zindex__elevated;
     }
 
     a {
-        z-index: 2;
+        z-index: $zindex__elevated + 1;
     }
 }
 
@@ -519,30 +519,6 @@ input.ordering-controls__input {
     &.filter {
         min-height: 950px;
         margin-right: 45px;
-    }
-
-    .loader-container {
-        $loader-hgt: 29px;
-
-        position: fixed;
-        bottom: -30px;
-        z-index: 100;
-        left: 50%;
-        margin: 0 0 0 ceil($layout-nav-width - $loader-hgt) / 2;
-        height: $loader-hgt;
-        width: $loader-hgt;
-        background: $color-white;
-
-        @include border-radius(15px);
-        @include opacity(0);
-        @include transition(all 0.1s);
-        @include box-shadow(1px 1px 3px rgba(0,0, 0, 0.2));
-
-        .loader {
-            position: absolute;
-            top: 5px;
-            left: 5px;
-        }
     }
     .loading {
         .loader-container {
