--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -332,7 +332,7 @@ a.add-table-row {
         background-color: $color-white;
         flex-grow: 0;
         padding-right: $spacing-xs;
-        z-index: 1;
+        z-index: $zindex__elevated;
     }
 
     &__line {
@@ -365,7 +365,7 @@ a.add-table-row {
         position: absolute;
         right: 30%;
         top: 0;
-        z-index: 1;
+        z-index: $zindex__elevated;
     }
 }
 
