--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -6,7 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     position: absolute;
-    z-index: 5;
+    z-index: $zindex__elevated;
     text-align: center;
     left: 0;
     top: 0;
